--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="poza cu mine-modified.png" width="250" height="250"></td>
+            <td><img src="images/poza cu mine-modified.png" width="250" height="250"></td>
             <td><h1>Maria Georgescu</h1> 
                 <p> <em>Ocupatie: <strong>Eleva</strong> in clasa a 11-a</i></p>
                 <p> <strong>CEO at <a href="https://www.pornhub.com/">Afacere De Succes</a></strong></p>
