--- a/hobby.html
+++ b/hobby.html
@@ -15,6 +15,6 @@
       <li>sa managai pisicute</li> 
     </ol>
     <h2> Eu cu gagica miu</h2>
-    <img src="doua pisicute.jpg">
+    <img src="images/pisicuta portocalie.jpg">
 </body>
 </html> 
