--- a/hobby.html
+++ b/hobby.html
@@ -10,7 +10,7 @@
     <h3> <strong>HOBBY-uri</strong> </h3>
     <ol> 
       <li>sa fac clatite</li>
-      <li>sa incerc sa nu bubui <a href="http://www.madgearu.ro/">madgearu</a></li>
+      <li>sa fiu elev bun la<a href="http://www.madgearu.ro/">madgearu</a></li>
       <li>sa merg la sala </li>
       <li>sa managai pisicute</li> 
     </ol>
